--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>무제 문서</title>
+<title>2023년 서울국제환경영화제 관객심사단 모집</title>
 </head>
 <body>
 <img src="http://greenfund.org/etcpage/2023/2023_simsaa.jpg" alt="" width="1000" height="2614" usemap="#Map" style="display: block"/>
