--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <title>2023년 서울국제환경영화제 관객심사단 모집</title>
 </head>
 <body>
-<img src="https://greenfund.org/etcpage/2023/2023_simsaa.jpg" alt="" width="1000" height="2614" usemap="#Map" style="display: block"/>
+<img src="http://greenfund.org/etcpage/2023/2023_simsaa.jpg" alt="" width="1000" height="2614" usemap="#Map" style="display: block"/>
 <map name="Map">
-  <area shape="rect" coords="502,2336,1006,2630" href="https://greenfund.org/etcpage/2023/sieff_audienceJudge_2023.docx" target="new">
+  <area shape="rect" coords="502,2336,1006,2630" href="http://greenfund.org/etcpage/2023/sieff_audienceJudge_2023.docx" target="new">
   <area shape="rect" coords="-6,2335,504,2629" href="https://sieff.kr/" target="new">
 </map>
 </body>
